chore: Update Docker tags in build.yaml

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,7 +28,9 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/uplion-frontend:latest
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/uplion-frontend:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/uplion-frontend:${{ github.sha }}
 
       - name: Image digest
         run: echo ${{ steps.build-and-push.outputs.digest }}
